[package]
name = "rust-lang-ve-telegram-bot"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tiny_http = "0.6"
telegram-bot = "0.7"
tokio = { version = "0.2", features = ["macros", "fs"]}

[target.heroku]
version = "nightly"
